--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Calculator Table</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jameel Brannon - Education</title>
+<link rel="stylesheet" href="index.css">
 </head>
-<h1>
-    Jameel Brannon
-</h1>
+<body>
+
+<div class="container">
+  <h1>Jameel Brannon</h1>
+  <p>this is my personal website...i can put whatever i want here...this is all i want to put here </p>
+</div>
+
+</body>
+</html>
