adding a liner and changing font

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <div class="container">
   <h1>Jameel Brannon</h1>
-  <p>this is my personal website...i can put whatever i want here...this is all i want to put here </p>
+  <p>this is my personal website...random stuff below </p>
+  <p>update 2.24.24 i'm chillen' chewing on smoked maguey plant rie nie  </p>
 </div>
 
 </body>
