--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h1>Jameel Brannon</h1>
   <p>this is my personal website...random stuff below </p>
   <p>update 2.24.24 i'm chillen' chewing on smoked maguey plant rie nie  </p>
+  <p>update 3.4.24   </p>
 </div>
 
 </body>
