--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="container">
   <h1>Jameel Brannon</h1>
   <p>this is my personal website...random stuff below </p>
-  <p>update 2.24.24 i'm chillen' chewing on smoked maguey plant rie nie  </p>
-  <p>update 3.4.24 drinking crystal + looking for stocks to long/short...finna go watch Netflix after </p>
+  <p>2.24.24 i'm chillen' chewing on smoked maguey plant rie nie  </p>
+  <p>3.4.24 drinking crystal + looking for stocks to long/short...finna go watch Netflix after </p>
 </div>
 
 </body>
