--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jameel Brannon - Education</title>
-<link rel="stylesheet" href="index.css">
+<style>
+  .container {
+    text-align: center;
+    margin: 0 auto;
+    max-width: 600px; /* Adjust the width as needed */
+  }
+</style>
 </head>
 <body>
 
 <div class="container">
   <h1>Jameel Brannon</h1>
-  <p>this is my personal website...random stuff below </p>
-  <p>2.24.24 i'm chillen' chewing on smoked maguey plant rie nie  </p>
-  <p>3.4.24 drinking crystal geyser + looking for stocks to long/short...finna go watch Netflix after </p>
+  <p>Email: Jameelbranon@outlook.com</p>
+  <a href="https://www.linkedin.com/in/jameelbrannon/" target="_blank">LinkedIn</a>
+  <a href="https://substack.com/@jameelbrannon" target="_blank">Substack</a>
+  <a href="https://github.com/jameelbrannon" target="_blank">GitHub</a>
+  <a href="https://www.youtube.com/channel/UC2e4ylkcu-WmvJL_BBYdNPg" target="_blank">YouTube</a>
+  <a href="https://rumble.com/account/content?type=all" target="_blank">Rumble</a>
 </div>
 
 </body>
 </html>
+
