updating site to represent company

--- a/index.html
+++ b/index.html
@@ -3,27 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jameel Brannon - Education</title>
-<style>
-  .container {
-    text-align: center;
-    margin: 0 auto;
-    max-width: 600px; /* Adjust the width as needed */
-  }
-</style>
+<title>Try Ventures</title>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-<div class="container">
-  <h1>Jameel Brannon</h1>
-  <p>Email: Jameelbranon@outlook.com</p>
-  <a href="https://www.linkedin.com/in/jameelbrannon/" target="_blank">LinkedIn</a>
-  <a href="https://substack.com/@jameelbrannon" target="_blank">Substack</a>
-  <a href="https://github.com/jameelbrannon" target="_blank">GitHub</a>
-  <a href="https://www.youtube.com/channel/UC2e4ylkcu-WmvJL_BBYdNPg" target="_blank">YouTube</a>
-  <a href="https://rumble.com/account/content?type=all" target="_blank">Rumble</a>
-</div>
-
-</body>
-</html>
-
+  <div class="container">
+    <h1>Try Ventures</h1>
+    <p>Try Ventures LLC, a Limited Liability Company, specializes in creating mobile apps designed to simplify your life. Our first app, currently in development, will make personal and investment finance calculations easier and more accessible for users. </p>
+    <nav>
+    </nav>
+  </div>
+  
+  </body>
+  </html>
