--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="container">
     <h1>Try Ventures</h1>
-    <p>Try Ventures LLC, a Limited Liability Company, specializes in creating mobile apps designed to simplify your life. Our first app, currently in development, will make personal and investment finance calculations easier and more accessible for users. </p>
+    <p>Try Ventures LLC, a Limited Liability Company, specializes in creating mobile apps designed to simplify your life.  </p>
     <nav>
     </nav>
   </div>
