addng moblle width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="container">
     <h1>Try Ventures</h1>
-    <p>Try Ventures LLC, a Limited Liability Company, specializes in creating mobile apps designed to simplify your life.  </p>
+    <p>Try Ventures specializes in creating innovative mobile apps designed to simplify your life. From finance tools to lifestyle solutions, our apps make everyday tasks easier and more efficient..  </p>
     <nav>
     </nav>
   </div>
