--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-  <div class="container">
-    <nav>
+<div class="container">
+  <nav>
     <h1>Try Ventures</h1>
-    <p>Try Ventures specializes in creating innovative mobile apps designed to simplify your life. From finance tools to lifestyle solutions, our apps make everyday tasks easier and more efficient..  </p>
-    </nav>
-  </div>
-  
-  </body>
-  </html>
+    <p>Try Ventures specializes in creating innovative mobile apps designed to simplify your life. From finance tools to lifestyle solutions, our apps make everyday tasks easier and more efficient.</p>
+  </nav>
+</div>
+
+</body>
+</html>
