--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
   <nav>
     <h1>Try Ventures</h1>
-    <p>Try Ventures specializes in creating innovative mobile apps designed to simplify your life. From finance tools to lifestyle solutions, our apps make everyday tasks easier and more efficient.</p>
+    <p>Try Ventures goal is to develop innovative mobile apps designed to simplify your life.</p>
   </nav>
 </div>
 
