--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <p>Try Ventures goal is to develop innovative mobile apps designed to simplify your life.</p>
   </nav>
 </div>
-
+<div class="coming-soon">
+  <h2>Coming Soon</h2>
+  <p class="unclickable-link">Try Finance</p>
+</div>
 </body>
 </html>
