adding privacy policy name

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 
 <div class="container">
   <nav>
-    <h1>Try Ventures</h1>
+    <h1>Try Ventures LLC</h1>
     <p>Try Ventures goal is to develop innovative mobile apps designed to simplify your life.</p>
   </nav>
 </div>
 <div class="coming-soon">
   <h2>Coming Soon</h2>
   <p class="unclickable-link">Try Finance</p>
+</div>
+<div class="privacy-policy">
+  <p>Privacy Policy</p>
+
 </div>
 </body>
 </html>
