added privacy and contact pages

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 <div class="container">
   <nav>
     <h1>Try Ventures LLC</h1>
-    <p>Try Ventures goal is to develop innovative mobile apps designed to simplify your life.</p>
+    <p>Try Ventures' goal is to develop innovative mobile apps designed to simplify your life.</p>
   </nav>
 </div>
 <div class="coming-soon">
   <h2>Coming Soon</h2>
   <p class="unclickable-link">Try Finance</p>
 </div>
-<div class="privacy-policy">
-  <p>Privacy Policy</p>
-
+<div class="contact-link">
+  <a href="contact.html">Contact</a>
 </div>
+<div class="privacy-policy">
+  <a href="privacy.html">Privacy Policy</a>
+</div>
+
 </body>
 </html>
