--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Try Ventures</title>
-<link rel="stylesheet" href="index.css">
-</head>
-<body>
-
-<div class="container">
-  <nav>
-    <h1>Try Ventures LLC</h1>
-    <p>Try Ventures' goal is to develop innovative mobile apps designed to simplify your life.</p>
-  </nav>
-</div>
-<div class="coming-soon">
-  <h2>Coming Soon</h2>
-  <p class="unclickable-link">Try Finance</p>
-</div>
-<div class="contact-link">
-  <a href="contact.html">Contact</a>
-</div>
-<div class="privacy-policy">
-  <a href="privacy.html">Privacy Policy</a>
-</div>
-
-</body>
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Try Ventures</title> 
+    <link rel="stylesheet" href="index.css"> 
+</head> 
+<body> 
+    <div class="container"> 
+        <nav> 
+            <h1>Try Ventures LLC</h1> 
+            <p>Try Ventures' goal is to develop innovative mobile apps designed to simplify your life.</p> 
+        </nav> 
+    </div> 
+    <div class="coming-soon"> 
+        <h2>Coming Soon</h2> 
+        <p class="unclickable-link">Try Finance</p> 
+    </div> 
+    <div class="contact-link"> 
+        <a href="contact.html">Contact</a> 
+    </div> 
+    <div class="privacy-policy"> 
+        <a href="privacy.html">Privacy Policy</a> 
+    </div>
+    <div class="terms-conditions"> 
+        <a href="terms.html">Terms and Conditions</a> 
+    </div>
+</body> 
 </html>
