--- a/terms.html
+++ b/terms.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <nav>
-            <h1>Try Ventures LLC</h1>
+            <h1>Terms & Conditions</h1>
             <p>Try Ventures' goal is to develop innovative mobile apps designed to simplify your life.</p>
         </nav>
     </div>
