--- a/terms.html
+++ b/terms.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <nav>
-            <h1>Terms & Conditions</h1>
-            <p></p>
+            <h1>Terms & Condition</h1>
+
         </nav>
     </div>
     <div class="terms-content">
